# pegaseengine

./: CMakeLists.txt  Dockerfile  README.md  TODO  configure.sh  features.txt
examples/: case1.cpp  case2.cpp
include/: base_object.hpp  cube.hpp  force.hpp  pegaseengine.hpp  plan.hpp  rectangle.hpp  scene.hpp
src/: OGLRenderer.cpp  OGLRenderer.hpp  OGLSphere.cpp  base_object.hpp  basebody.hpp  body.hpp  box.cpp  camera.hpp  collider.cpp  collider.hpp  collisionmanager.cpp  collisionmanager.hpp  config.hpp  const.hpp  cube.cpp  cube.hpp  datastruct.hpp  image.hpp  logger.hpp  main.cpp  material.cpp  material.hpp  materiau.cpp  matrix.hpp  mediamanager.hpp  memorymanager.cpp  memorymanager.hpp  newmatrix.hpp  objectpool.hpp  observerboard.hpp  octree.cpp  octree.hpp  oglplane.cpp  oglplane.hpp  oglrenderer.hpp  oglsphere.hpp  pegaseengine.cpp  pegaseengine.hpp  pegasepybindings.cpp  plan.cpp  (+28 more)
src.bak/: basebody.cpp  basebody.hpp  camera.cpp  image.cpp  matrix.cpp  sphere.cpp  tga.cpp  vector3.hpp
src/backup/: collisionboard.hpp  collisionmanager.hpp  mediamanager.hpp  objectpool.hpp  pluginmanager.hpp  reader.hpp  readerjson.py  renderer.hpp  spherepool.hpp
src/backup/maths/: quaternion.cpp  quaternion.hpp  vector3.hpp
src/maths/: matrix.hpp  quaternion.hpp  vector3.hpp
test/: test1.cpp  test1.py
tests/: scene.json  scene01.json  scene01.txt
